--- a/index.html
+++ b/index.html
@@ -157,126 +157,142 @@
              </div>
     </section>
 
-        <!-- Sección de Formación académica 
+        <!-- Sección de Formación académica -->
     <section class="academic" id="formacion">
         <h2 class="academic__title" >Formación académica</h2>
         <div class="academic__courses">
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
-                    <!-- Pon el logotipo de la institución de formación 
-                    <li class="academic__courses__item__img"><img src="assets\ufpr_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Análisis de datos</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>2018 - UFPR</p></li>
+                    <li class="academic__courses__item__img"><img src="assets\compuestudio_logo.png"></li>
+                    <li class="academic__courses__item__subtitle"><p>2010 - Compuestudio</p></li>
+                    <li class="academic__courses__item__title"><h4>Técnico en Sistémas</h4></li>
                 </ul>
             </div>
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
-                    <!--Pon el logotipo de la institución de formación 
+                    <li class="academic__courses__item__img"><img src="assets\sanjose_logo.png"></li>
+                    <li class="academic__courses__item__subtitle"><p>2023 - Fundación de Educación Superior San José</p></li>
+                    <li class="academic__courses__item__title">
+                        <h4>
+                            <p>Tecnólogo en Gestión de Sistémas de Información</p>
+                            <p>Seminario en Analítica y Big Data</p>
+                        </h4>
+                </li>
+                </ul>
+            </div>
+            <div class="academic__courses__box">
+                <ul class="academic__courses__list">
+                    <li class="academic__courses__item__img"><img src="assets\oracle_logo.png"></li>
+                    <li class="academic__courses__item__subtitle"><p>En Curso - Oracle Next Education</p></li>
+                    <li class="academic__courses__item__title"><h4>Desarrollo de Software</h4></li>
+                </ul>
+            </div>
+            <div class="academic__courses__box">
+                <ul class="academic__courses__list">
                     <li class="academic__courses__item__img"><img src="assets\alura_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Formación en UX Design</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>2019 - Alura</p></li>
+                    <li class="academic__courses__item__subtitle"><p>2024 - Alura Latam</p></li>
+                    <li class="academic__courses__item__title">
+                        <h4>
+                            <p>Metodologías Ágiles (AGILE)</p>
+                            <p>Desarrollo Profecional</p>
+                            <p>Soft Skills</p>
+                        </h4>
+                    </li>
                 </ul>
+            </div>          
+        </div>
+    </section>
+
+    <!-- Sección de Experiencia Profesional/Proyectos -->
+    <section class="experience" id="xp">
+        <h2 class="experience__section__title" >Experiencia Profecional</h2>
+        <div class="experiencie__box__one">
+            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
+            <img class="experience__img" src="assets\encriptador_print.png">
+            <div class="experience__info__one">
+                <h2 class="experience__title">Encriptador de texto</h2>
+                <h3 class="experience__text">JavaScript, HTML y CSS</h3>
+                    <div class="experience__description">
+                        <!-- Pon el enlace del proyecto en Github o GithubPages -->
+                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button class="experiencia__botao--repo">Repositório</button></a></span>
+                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
+                    </div>
             </div>
-            <div class="academic__courses__box">
-                <ul class="academic__courses__list">
-                    <!-- Pon el logotipo de la institución de formación 
-                    <li class="academic__courses__item__img"><img src="assets\ufrj_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Posgrado en diseño</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>En curso - UFRJ</p></li>
-                </ul>
+        </div>
+
+        <div class="experiencie__box__two">
+            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
+            <img class="experience__img" src="assets\barberia_print.png">
+            <div class="experience__info__two">
+                <h2 class="experience__title">Barbería Cora</h2>
+                <h3 class="experience__text">HTML y CSS</h3>
+                    <div class="experience__description">
+                        <!-- Pon el enlace del proyecto en Github o GithubPages -->
+                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repositório</button></a></span>
+                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
+                    </div>
+            </div>
+        </div>  
+
+        
+        <div class="experiencie__box__one">
+            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
+            <img class="experience__img" src="assets\adivinanza_print.png">
+            <div class="experience__info__one">               
+                <h2 class="experience__title">Juego de adivinanza</h2>
+                <h3 class="experience__text">JavaScript, HTML y CSS</h3>
+                    <div class="experience__description">
+                        <!-- Pon el enlace del proyecto en Github o GithubPages -->
+                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button class="experiencia__botao--repo">Repositório</button></a></span>
+                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
+                    </div>
+            </div>
+        </div>  
+
+        <div class="experiencie__box__two">
+            <img class="experience__img" src="assets\damasa_print.png">
+            <div class="experience__info__two">
+                <h2 class="experience__title">Normas Central de Monitoreo</h2>
+                <h3 class="experience__text">HTML y CSS</h3>
+                    <div class="experience__description">
+                            <!-- Pon el enlace del proyecto en Github o GithubPages -->
+                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repositório</button></a></span>
+                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
+                    </div>
             </div>
         </div>
     </section>
 
-    <!-- Sección de Experiencia Profesional/Proyectos
-    <section class="experience" id="xp">
-        <h2 class="experience__section__title" >Experiencia Profissional</h2>
-        <div class="experiencie__box">
-            <!-- Pon el logotipo/captura de pantalla de tu proyecto 
-            <img class="experience__img" src="assets\decod_print.png">
-            <div class="experience__info"
-                <h2 class="experience__title">Encriptador de texto</h2>
-                <h3 class="experience__text">Challenge Alura Codificador </h3>
-                    <div class="experience__description">
-                        <!-- Pon el enlace del proyecto en Github o GithubPages 
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
-                    </div>
+        <!-- Sección de Contacto -->
+    <section class="formcontato" id="contacto">
+        <div  class="formcontato__contacto">
+            <div class="formcontato--esquerda">
+                <img class="formcontato__img" src="assets\contact_image.png">
             </div>
-        </div>  
-
-        <div class="experiencie__box">
-            <!-- Pon el logotipo/captura de pantalla de tu proyecto 
-            <img class="experience__img" src="assets\forca_print.png">
-            <div class="experience__info"
-                <h2 class="experience__title">Juego creado con HTML y JavaScript</h2>
-                <h3 class="experience__text">Challenge Oracle </h3>
-                    <div class="experience__description">
-                        <!-- Pon el enlace del proyecto en Github o GithubPages 
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
-                    </div>
+            <div class="formcontato__text">
+                <h2 class="formcontato__title">Contacto</h2>
+                <h3 class="formcontato__subtext">¿Quieres contactarme?</h3>
+                <h3 class="formcontato__subtext">Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. </h3>
+                <form class="formcontato__form" name="form">
+                    <input class="formcontato__input" type="text" name="nombre" placeholder="Nombre">
+                    <input class="formcontato__input" type="email" name="email" placeholder="E-mail">
+                    <input class="formcontato__input" type="text" name="asunto" placeholder="Assunto">
+                    <textarea class="formcontato__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Mensaje"></textarea>
+                    <button type="submit" class="formcontato__botao">Enviar mensaje</button>
+                </form>
             </div>
-        </div>  
-
-        <div class="experience__box">
-            <!-- Pon el logotipo/captura de pantalla de tu proyecto 
-            <img class="experience__img" src="assets\secretcode_print.png">
-            <div class="experience__info-container"
-                <h2 class="experience__title">Encriptador de texto</h2>
-                <h3 class="experience__text">Challenge Oracle </h3>
-                    <div class="experience__description">
-                            <!-- Pon el enlace del proyecto en Github o GithubPages 
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
-                    </div>
-            </div>
-        </div>  
-
-        <div class="experience__box">
-            <img class="experience__img" src="assets\forca2_print.png">
-            <div class="experience__info-container"
-            <h2 class="experience__title">Juego creado con HTML, CSS y JavaScript</h2>
-                <h3 class="experience__text">Challenge Oracle </h3>
-                    <div class="experience__description">
-                            <!-- Pon el enlace del proyecto en Github o GithubPages 
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
-                    </div>
         </div>
-        </div>  
+    </section>
 
-        <!-- Sección de Contacto 
-        <section class="formcontato" id="contacto">
-            <div  class="formcontato__contacto">
-                <div class="formcontato--esquerda">
-                    <img class="formcontato__img" src="assets\contact_image.png">
-                </div>
-                <div class="formcontato__text">
-                    <h2 class="formcontato__title">Contacto</h2>
-                    <h3 class="formcontato__subtext">¿Quieres contactarme?</h3>
-                    <h3 class="formcontato__subtext">Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. </h3>
-                    <form class="formcontato__form" name="form">
-                        <input class="formcontato__input" type="text" name="nombre" placeholder="Nombre">
-                        <input class="formcontato__input" type="email" name="email" placeholder="E-mail">
-                        <input class="formcontato__input" type="text" name="asunto" placeholder="Assunto">
-                        <textarea class="formcontato__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Mensaje"></textarea>
-                        <button type="submit" class="formcontato__botao">Enviar mensaje</button>
-                    </form>
-                </div>
-            </div>
-        </section>
-
-        <!-- Sección de Footer -->
-        <section class="footer">
-            <div class="footer__rodape">
-                <p>Desarrollado por David Tapias</p>
-                <p>2024</p>
-            </div>
-        </section>
-    </div>
- <!-- Script del documento JavaScript 
--->
+    <!-- Sección de Footer -->
+    <section class="footer">
+        <div class="footer__rodape">
+            <p>Desarrollado por David Tapias</p>
+            <p>2024</p>
+        </div>
+    </section>
+    
+ <!-- Script del documento JavaScript-->
 <script src="validacion.js"></script>
 </body>
 </html>
