Se termina -sin pulir- la versión escritorio

--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
                 <h3 class="title__subsection">Soy Desarrollador de software frontend con sólidos conocimientos en JavaScript, HTML, CSS, Git y GitHub. Actualmente en búsqueda activa de oportunidades para aplicar mis habilidades en el ámbito laboral.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
-                    <li class="title__network__item"><a href="">Github <img src="assets\arrow.png"> </a></li>
-                    <li class="title__network__item"><a href="">Linkedin <img src="assets\arrow.png"></a></li>
-                    <li class="title__network__item"><a href="">Instagram <img src="assets\arrow.png"></a></li>
-                    <li class="title__network__item"><a href="">Currículo <img src="assets\arrow.png"></a></li>
+                    <li class="title__network__item"><a href="https://github.com/devtapias" target="_blank">Github <img src="assets\arrow.png"> </a></li>
+                    <li class="title__network__item"><a href="https://www.linkedin.com/in/david-esteban-tapias-jimenez/" target="_blank">Linkedin <img src="assets\arrow.png"></a></li>
+                    <li class="title__network__item"><a href="assets/curriculum.pdf" target="_blank">Curriculum Vitae<img src="assets\arrow.png"></a></li>
                 </ul>
             </div>
         </div>
