se modifica el readme

--- a/index.html
+++ b/index.html
@@ -290,6 +290,10 @@
             <p>2024</p>
         </div>
     </section>
+
+    <section>
+        <a href="#" id="btn-volver-arriba" title="Volver arriba">↑</a>
+    </section>
     
  <!-- Script del documento JavaScript-->
 <script src="validacion.js"></script>
